--- a/README
+++ b/README
@@ -2,8 +2,9 @@
 ---------------
 CS561/CS594 (Advanced Linux Kernel Programming) is a graduate-level CS course at UIC, which serves as an introduction to coding in a real-world kernel environment.
 I was unfortunately unable to take this class during my time as an undergrad, but the professor has kindly granted me all course material.
-The following repo will contain all of my implementations of assignments from the course as they were given to me. I use the assignments as inspiration rather than a rigid set of rules, so my implementations will differ from assignment instructions
-(i.e., any students taking this course and reading this should not use my code...)
+The following repo will list all of my implementations of assignments from the course as they were given to me. I use the assignments as inspiration rather than a rigid set of rules, so my implementations will differ from assignment instructions
+
+Because uploading my code may violate academic integrity, I will not be pushing any code to this repo.
 
 Current modifications:
 s2_encrypt system call which takes a user-specified string and encryption key, encrypts the string, and prints it out.
